fixed last page jumping

--- a/app/assets/stylesheets/custom.scss.less
+++ b/app/assets/stylesheets/custom.scss.less
@@ -71,6 +71,8 @@ body {
   width: 100%;
   border-top: 1px solid #CBC6C2;
   z-index: 9999;
+  width:100vw !important;
+  overflow-x:hidden !important;
 }
 
 .footer form {
